--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aoform",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "main.js",
   "bin": {
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@permaweb/ao-connect": "^0.0.27",
+    "@permaweb/aoconnect": "^0.0.59",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0"
